# oxiclean

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
apps/oxiclean/: Cargo.toml  README.md
apps/oxiclean/src/: main.rs
crates/oxiclean_core/: Cargo.toml
crates/oxiclean_core/src/: collector.rs  config.rs  constants.rs  lib.rs  parser.rs  resolver.rs  types.rs
crates/oxiclean_import_bloat/: Cargo.toml  README.md
crates/oxiclean_import_bloat/src/: checker.rs  collector.rs  config.rs  graph.rs  lib.rs  parser.rs  reporter.rs  resolver.rs  types.rs
crates/oxiclean_import_depth/: Cargo.toml  README.md
crates/oxiclean_import_depth/src/: checker.rs  config.rs  depth.rs  lib.rs  reporter.rs  types.rs
