[workspace]
resolver = "2"

members = [
    "apps/*",
    "crates/*",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = []
license = "MIT"
repository = ""

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
dashmap = "6.1"
env_logger = "0.11"
ignore = "0.4.25"
log = "0.4"
oxc_allocator = "0.97.0"
oxc_ast = "0.97.0"
oxc_parser = "0.97.0"
oxc_span = "0.97.0"
oxc_syntax = "0.97.0"
path-clean = "1.0.1"
rayon = "1.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
