[package]
name = "oxiclean_core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
dashmap.workspace = true
ignore.workspace = true
log.workspace = true
oxc_allocator.workspace = true
oxc_ast.workspace = true
oxc_parser.workspace = true
oxc_span.workspace = true
oxc_syntax.workspace = true
path-clean.workspace = true
serde.workspace = true
serde_json.workspace = true

[lib]
name = "oxiclean_core"
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3.10"
