[package]
name = "oxiclean_import_bloat"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
colored.workspace = true
dashmap.workspace = true
log.workspace = true
oxiclean_core = { path = "../oxiclean_core" }
path-clean.workspace = true
rayon.workspace = true

[lib]
name = "oxiclean_import_bloat"
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3.10"
